Добавил vue к проекту

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ POSTGRES_DB=project_db
 POSTGRES_PASSWORD=project_password12345
 POSTGRES_USER=project_admin
 POSTGRES_EXTRA_OPTS='-Z6 --schema=public --blobs'
+
+# vue
+VUE_APP_BACKEND_PROTOCOL=http
+VUE_APP_BACKEND_HOST=127.0.0.1
+VUE_APP_BACKEND_PORT=80
