--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "url-loader": "^4.1.1",
     "vue": "^3.2.13",
+    "vue-pdf-embed": "^1.2.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.1.0"
   },
